--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -108,11 +108,21 @@
                     </li>
 
                     <li class="nav-item m-1">
+                        <a href="/sales" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
+                            style="text-decoration: none;">
+                            <i class="bi bi-cash-coin"></i>
+                            <div class="span" style="margin-left: 12px; display: none;">
+                                <span class="fs-5">Sell</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="nav-item m-1">
                         <a href="#" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
                             style="text-decoration: none;">
                             <i class="bi bi-receipt fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Orders</span>
+                                <span class="fs-5">Transactions</span>
                             </div>
                         </a>
                     </li>
@@ -182,6 +192,8 @@
             });
         }
     </script>
+
+    <script src="~/lib/jquery/jquery-3.7.1.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
